--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - run: composer --version
+
       - run: composer require nunomaduro/larastan --with-dependencies --dev
