--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: composer --version
+      - run: sed -i -e '/"minimum-stability"/d' composer.json && composer update --lock
 
       - run: composer require nunomaduro/larastan --with-dependencies --dev
